@@ -48,6 +48,12 @@ namespace GtkSharp.Generation {
 			}
 		}
 
+		private bool DisableVoidCtor {
+			get {
+				return Elem.HasAttribute ("disable_void_ctor");
+			}
+		}
+
 		private class DirectoryInfo {
 			public string assembly_name;
 			public Hashtable objects;
@@ -202,6 +208,13 @@ namespace GtkSharp.Generation {
 			gen_info.Writer.WriteLine();
 			gen_info.Writer.WriteLine("\t\tprotected " + Name + "(GLib.GType gtype) : base(gtype) {}");
 			gen_info.Writer.WriteLine("\t\tpublic " + Name + "(IntPtr raw) : base(raw) {}");
+			if (ctors.Count == 0 && !DisableVoidCtor) {
+				gen_info.Writer.WriteLine();
+				gen_info.Writer.WriteLine("\t\tprotected " + Name + "() : base(IntPtr.Zero)");
+				gen_info.Writer.WriteLine("\t\t{");
+				gen_info.Writer.WriteLine("\t\t\tCreateNativeObject (new string [0], new GLib.Value [0]);");
+				gen_info.Writer.WriteLine("\t\t}");
+			}
 			gen_info.Writer.WriteLine();
 
 			base.GenCtors (gen_info);
