@@ -8,15 +8,6 @@
 // This code is inserted after the automatically generated code.
 //
 
-		public CellRenderer () : base (IntPtr.Zero)
-		{
-			if (GetType () != typeof (CellRenderer)) {
-				CreateNativeObject (new string[0], new GLib.Value[0]);
-				return;
-			}
-			throw new InvalidOperationException ("You MUST subclass this class");
-		}
-
 		[DllImport("gtksharpglue")]
 		static extern void gtksharp_cellrenderer_base_get_size (IntPtr handle, IntPtr widget, Gdk.Rectangle cell_area, out int x_offset, out int y_offset, out int width, out int height);
                 
