@@ -1,13 +1,14 @@
 <?xml version="1.0"?>
 <metadata>
-  <attr path="//object[@cname='GtkHTML']/constructor[@cname='gtk_html_new']" name="hidden">1</attr>
-  <attr path="//object[@cname='GtkHTML']/constructor[@cname='gtk_html_new_from_string']" name="hidden">1</attr>
-  <attr path="//object[@cname='GtkHTML']/signal[@name='Command']" name="name">OnCommand</attr>
-  <attr path="//object[@cname='GtkHTML']/method[@name='BeginContent']" name="name">Begin</attr>
-  <attr path="//object[@cname='GtkHTML']/method[@name='BeginFull']" name="name">Begin</attr>
-  <attr path="//struct[@cname='GtkHTMLStream']" name="opaque">1</attr>
-  <attr path="//struct[@cname='GtkHTMLStream']/method[@name='Write']/*/*[@name='buffer']" name="type">const-guchar*</attr>
-  <attr path="//struct[@cname='GtkHTMLStream']/method[@name='Write']/*/*[@name='buffer']" name="array">1</attr>
+  <attr path="/api/namespace/object[@cname='GtkHTML']" name="disable_void_ctor">1</attr>
+  <attr path="/api/namespace/object[@cname='GtkHTML']/constructor[@cname='gtk_html_new']" name="hidden">1</attr>
+  <attr path="/api/namespace/object[@cname='GtkHTML']/constructor[@cname='gtk_html_new_from_string']" name="hidden">1</attr>
+  <attr path="/api/namespace/object[@cname='GtkHTML']/signal[@name='Command']" name="name">OnCommand</attr>
+  <attr path="/api/namespace/object[@cname='GtkHTML']/method[@name='BeginContent']" name="name">Begin</attr>
+  <attr path="/api/namespace/object[@cname='GtkHTML']/method[@name='BeginFull']" name="name">Begin</attr>
+  <attr path="/api/namespace/struct[@cname='GtkHTMLStream']" name="opaque">1</attr>
+  <attr path="/api/namespace/struct[@cname='GtkHTMLStream']/method[@name='Write']/*/*[@name='buffer']" name="type">const-guchar*</attr>
+  <attr path="/api/namespace/struct[@cname='GtkHTMLStream']/method[@name='Write']/*/*[@name='buffer']" name="array">1</attr>
 </metadata>
 
 
