@@ -1,5 +1,12 @@
 2004-06-01  Mike Kestner  <mkestner@ximian.com>
 
+	* generator/ObjectGen.cs : generate protected ctor () for all 
+	GLib.Objects that don't have any ctors.
+	* gtk/CellRenderer.custom : remove ctor ().
+	* gtkhtml/Gtk.metadata : add a disable_void_ctor rule for HTML.
+
+2004-06-01  Mike Kestner  <mkestner@ximian.com>
+
 	* gtk/Gtk.metadata : mark SizeRequest requisition as out, not ref.
 	[Fixes #59388]
 
